# mitmproxy-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: config.rs  error.rs  interceptor.rs  lib.rs  server.rs  upstream.rs
src/examples/: hexdumper.rs
src/handler/: http.rs  mod.rs  socks5.rs
src/tls/: certs.rs  interceptor.rs  mod.rs
